<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalji">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/datum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:hint="@string/datum"/>

        <EditText
            android:id="@+id/opis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:hint="@string/opis"/>

        <EditText
            android:id="@+id/rezultat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:hint="@string/rezultat"/>

        <Button
            android:id="@+id/nazad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:layout_gravity="center"
            android:text="@string/odustani" />

        <Button
            android:id="@+id/promjeni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            android:layout_gravity="center"
            android:text="@string/promjeni" />

        <Button
            android:id="@+id/obrisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:layout_gravity="center"
            android:text="@string/obrisi" />

        <Button
            android:id="@+id/dodaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/novo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>